// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`encode-and-compress encodes "memorial.exr" to "jpg" using quality 0.7, tonemapping: 1 1`] = `
{
  "gainMapMax": [
    8.098032082960527,
    8.098032082960527,
    8.098032082960527,
  ],
  "gainMapMin": [
    0,
    0,
    0,
  ],
  "gamma": [
    1,
    1,
    1,
  ],
  "hdrCapacityMax": 8.098032082960527,
  "hdrCapacityMin": 0,
  "offsetHdr": [
    0.015625,
    0.015625,
    0.015625,
  ],
  "offsetSdr": [
    0.015625,
    0.015625,
    0.015625,
  ],
}
`;

exports[`encode-and-compress encodes "memorial.exr" to "jpg" using quality 0.7, tonemapping: 4 1`] = `
{
  "gainMapMax": [
    8.098032082960527,
    8.098032082960527,
    8.098032082960527,
  ],
  "gainMapMin": [
    0,
    0,
    0,
  ],
  "gamma": [
    1,
    1,
    1,
  ],
  "hdrCapacityMax": 8.098032082960527,
  "hdrCapacityMin": 0,
  "offsetHdr": [
    0.015625,
    0.015625,
    0.015625,
  ],
  "offsetSdr": [
    0.015625,
    0.015625,
    0.015625,
  ],
}
`;

exports[`encode-and-compress encodes "memorial.exr" to "png" using quality 0.7, tonemapping: 1 1`] = `
{
  "gainMapMax": [
    8.098032082960527,
    8.098032082960527,
    8.098032082960527,
  ],
  "gainMapMin": [
    0,
    0,
    0,
  ],
  "gamma": [
    1,
    1,
    1,
  ],
  "hdrCapacityMax": 8.098032082960527,
  "hdrCapacityMin": 0,
  "offsetHdr": [
    0.015625,
    0.015625,
    0.015625,
  ],
  "offsetSdr": [
    0.015625,
    0.015625,
    0.015625,
  ],
}
`;

exports[`encode-and-compress encodes "memorial.exr" to "png" using quality 0.7, tonemapping: 4 1`] = `
{
  "gainMapMax": [
    8.098032082960527,
    8.098032082960527,
    8.098032082960527,
  ],
  "gainMapMin": [
    0,
    0,
    0,
  ],
  "gamma": [
    1,
    1,
    1,
  ],
  "hdrCapacityMax": 8.098032082960527,
  "hdrCapacityMin": 0,
  "offsetHdr": [
    0.015625,
    0.015625,
    0.015625,
  ],
  "offsetSdr": [
    0.015625,
    0.015625,
    0.015625,
  ],
}
`;

exports[`encode-and-compress encodes "memorial.exr" to "webp" using quality 0.7, tonemapping: 1 1`] = `
{
  "gainMapMax": [
    8.098032082960527,
    8.098032082960527,
    8.098032082960527,
  ],
  "gainMapMin": [
    0,
    0,
    0,
  ],
  "gamma": [
    1,
    1,
    1,
  ],
  "hdrCapacityMax": 8.098032082960527,
  "hdrCapacityMin": 0,
  "offsetHdr": [
    0.015625,
    0.015625,
    0.015625,
  ],
  "offsetSdr": [
    0.015625,
    0.015625,
    0.015625,
  ],
}
`;

exports[`encode-and-compress encodes "memorial.exr" to "webp" using quality 0.7, tonemapping: 4 1`] = `
{
  "gainMapMax": [
    8.098032082960527,
    8.098032082960527,
    8.098032082960527,
  ],
  "gainMapMin": [
    0,
    0,
    0,
  ],
  "gamma": [
    1,
    1,
    1,
  ],
  "hdrCapacityMax": 8.098032082960527,
  "hdrCapacityMin": 0,
  "offsetHdr": [
    0.015625,
    0.015625,
    0.015625,
  ],
  "offsetSdr": [
    0.015625,
    0.015625,
    0.015625,
  ],
}
`;

exports[`encode-and-compress encodes "memorial.hdr" to "jpg" using quality 0.7, tonemapping: 1 1`] = `
{
  "gainMapMax": [
    8.103287808412022,
    8.103287808412022,
    8.103287808412022,
  ],
  "gainMapMin": [
    0,
    0,
    0,
  ],
  "gamma": [
    1,
    1,
    1,
  ],
  "hdrCapacityMax": 8.103287808412022,
  "hdrCapacityMin": 0,
  "offsetHdr": [
    0.015625,
    0.015625,
    0.015625,
  ],
  "offsetSdr": [
    0.015625,
    0.015625,
    0.015625,
  ],
}
`;

exports[`encode-and-compress encodes "memorial.hdr" to "jpg" using quality 0.7, tonemapping: 4 1`] = `
{
  "gainMapMax": [
    8.103287808412022,
    8.103287808412022,
    8.103287808412022,
  ],
  "gainMapMin": [
    0,
    0,
    0,
  ],
  "gamma": [
    1,
    1,
    1,
  ],
  "hdrCapacityMax": 8.103287808412022,
  "hdrCapacityMin": 0,
  "offsetHdr": [
    0.015625,
    0.015625,
    0.015625,
  ],
  "offsetSdr": [
    0.015625,
    0.015625,
    0.015625,
  ],
}
`;

exports[`encode-and-compress encodes "memorial.hdr" to "png" using quality 0.7, tonemapping: 1 1`] = `
{
  "gainMapMax": [
    8.103287808412022,
    8.103287808412022,
    8.103287808412022,
  ],
  "gainMapMin": [
    0,
    0,
    0,
  ],
  "gamma": [
    1,
    1,
    1,
  ],
  "hdrCapacityMax": 8.103287808412022,
  "hdrCapacityMin": 0,
  "offsetHdr": [
    0.015625,
    0.015625,
    0.015625,
  ],
  "offsetSdr": [
    0.015625,
    0.015625,
    0.015625,
  ],
}
`;

exports[`encode-and-compress encodes "memorial.hdr" to "png" using quality 0.7, tonemapping: 4 1`] = `
{
  "gainMapMax": [
    8.103287808412022,
    8.103287808412022,
    8.103287808412022,
  ],
  "gainMapMin": [
    0,
    0,
    0,
  ],
  "gamma": [
    1,
    1,
    1,
  ],
  "hdrCapacityMax": 8.103287808412022,
  "hdrCapacityMin": 0,
  "offsetHdr": [
    0.015625,
    0.015625,
    0.015625,
  ],
  "offsetSdr": [
    0.015625,
    0.015625,
    0.015625,
  ],
}
`;

exports[`encode-and-compress encodes "memorial.hdr" to "webp" using quality 0.7, tonemapping: 1 1`] = `
{
  "gainMapMax": [
    8.103287808412022,
    8.103287808412022,
    8.103287808412022,
  ],
  "gainMapMin": [
    0,
    0,
    0,
  ],
  "gamma": [
    1,
    1,
    1,
  ],
  "hdrCapacityMax": 8.103287808412022,
  "hdrCapacityMin": 0,
  "offsetHdr": [
    0.015625,
    0.015625,
    0.015625,
  ],
  "offsetSdr": [
    0.015625,
    0.015625,
    0.015625,
  ],
}
`;

exports[`encode-and-compress encodes "memorial.hdr" to "webp" using quality 0.7, tonemapping: 4 1`] = `
{
  "gainMapMax": [
    8.103287808412022,
    8.103287808412022,
    8.103287808412022,
  ],
  "gainMapMin": [
    0,
    0,
    0,
  ],
  "gamma": [
    1,
    1,
    1,
  ],
  "hdrCapacityMax": 8.103287808412022,
  "hdrCapacityMin": 0,
  "offsetHdr": [
    0.015625,
    0.015625,
    0.015625,
  ],
  "offsetSdr": [
    0.015625,
    0.015625,
    0.015625,
  ],
}
`;

exports[`encode-and-compress encodes "spruit_sunrise_1k.hdr" to "jpg" using quality 0.95, tonemapping: 1 1`] = `
{
  "gainMapMax": [
    15.99929538702341,
    15.99929538702341,
    15.99929538702341,
  ],
  "gainMapMin": [
    0,
    0,
    0,
  ],
  "gamma": [
    1,
    1,
    1,
  ],
  "hdrCapacityMax": 15.99929538702341,
  "hdrCapacityMin": 0,
  "offsetHdr": [
    0.015625,
    0.015625,
    0.015625,
  ],
  "offsetSdr": [
    0.015625,
    0.015625,
    0.015625,
  ],
}
`;
